- editplaylist page is now fully working - added endpoint to add song to a playlist
