# src/api/docs/swagger_output.json
@@ -551,21 +551,6 @@
             "required": true,
             "type": "string",
             "description": "Id of the user we want to edit playlists of."
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "track": {
-                  "example": "any"
-                },
-                "pid": {
-                  "example": "any"
-                }
-              }
-            }
           }
         ],
         "responses": {
@@ -667,6 +652,31 @@
           },
           "500": {
             "description": "Internal error"
+          }
+        }
+      }
+    },
+    "/addsongtoplaylist/{id}": {
+      "put": {
+        "tags": [
+          "playlist"
+        ],
+        "description": "Endpoint that allows to add song to playlist",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Id of the playlist we want to add song to."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "playlist updated"
+          },
+          "500": {
+            "description": "Server error"
           }
         }
       }
